--- a/configs/zeroshot_v01_supervised_baseline.yaml
+++ b/configs/zeroshot_v01_supervised_baseline.yaml
@@ -1,15 +1,22 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
   WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
+  CLS_AGNOSTIC_BBOX_REG: True
   RPN:
     PRE_NMS_TOP_N_TEST: 6000
     POST_NMS_TOP_N_TEST: 1000
+  ROI_BOX_HEAD:
+    NUM_CLASSES: 49
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST: ("coco_2017_val",)
+  TRAIN: ("coco_zeroshot_train",)
+  TEST: ("coco_not_zeroshot_val",)
+  DATASET_CLASS: "COCODataset"
 SOLVER:
   BASE_LR: 0.01
   WEIGHT_DECAY: 0.0001
   STEPS: (120000, 160000)
   MAX_ITER: 180000
+  IMS_PER_BATCH: 8
+  TEST_PERIOD: 10000
+TEST:
   IMS_PER_BATCH: 8
